[tool.poetry]
name = "optimal-ironman"
version = "0.1.0"
description = ""
authors = ["petevdp <pjvanderpol@gmail.com>"]
readme = "README.md"
packages = [{include = "optimal_ironman"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
tornado = "^6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
